--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,9 +30,7 @@
   --blue-400: #4dabf7;
   --yellow-100: #fff3bf;
 
-  --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --body-font: "Roboto Mono", "monospace";
   --body-font-size: 20px;
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
@@ -59,7 +57,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --body-color: var(--gray-300);
-    --body-bg: var(--gray-800);
+    --body-bg: black;
 
     --heading-color: #fff;
 
