--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,7 +34,7 @@
   --body-font-size: 20px;
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
-  --body-bg: #fff;
+  --body-bg: black;
 
   --link-color: var(--blue);
   --link-hover-color: #1c7ed6;
