--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,7 @@
   --gray-700: #495057;
   --gray-800: #343a40;
   --gray-900: #212529;
-  --dark-poole-001: hsl(200, 3%, 12%);
+  --dark-poole-001: black;
   --dark-poole-002: hsl(0, 0%, 85%);
   --dark-poole-link-color: rgba(255, 255, 255, 0.75);
   --dark-poole-link-hover: #fff;
@@ -30,11 +30,13 @@
   --blue-400: #4dabf7;
   --yellow-100: #fff3bf;
 
-  --body-font: "Roboto Mono", "monospace";
+  --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --body-font-size: 20px;
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
-  --body-bg: black;
+  --body-bg: #fff;
 
   --link-color: var(--blue);
   --link-hover-color: #1c7ed6;
@@ -57,7 +59,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --body-color: var(--gray-300);
-    --body-bg: black;
+    --body-bg: var(--gray-800);
 
     --heading-color: #fff;
 
