--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,8 +11,8 @@
   --gray-900: #212529;
   --dark-poole-001: black;
   --dark-poole-002: hsl(0, 0%, 85%);
-  --dark-poole-link-color: rgba(255, 255, 255, 0.75);
-  --dark-poole-link-hover: #fff;
+  --dark-poole-link-color: #ff5400;
+  --dark-poole-link-hover: #c84300;
 
   --red: #fa5252;
   --pink: #e64980;
